Bug 265003 - powerpc64le build fails due to 985c33b132f6c23a69bd808e008ae0f46131a31e (merged in 1f1e2261e341e6ca6862f82261066ef1705f0a7a)
Summary: powerpc64le build fails due to 985c33b132f6c23a69bd808e008ae0f46131a31e (merg...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: powerpc Any
: --- Affects Many People
Assignee: Martin Matuska
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-02 21:05 UTC by Piotr Kubaj
Modified: 2022-07-08 18:54 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Kubaj freebsd_committer freebsd_triage 2022-07-02 21:05:36 UTC
buildkernel fails with:
cc -target powerpc64le-unknown-freebsd14.0 --sysroot=/usr/obj/root/src/powerpc.powerpc64le/tmp -B/usr/obj/root/src/powerpc.powerpc64le/tmp/usr/bin  -O2 -pipe -fno-common -D__KERNEL__ -DFREEBSD_NAMECACHE -DBUILDING_ZFS -DHAVE_UIO_ZEROCOPY -DWITHOUT_NETDUMP -D__KERNEL -D_SYS_CONDVAR_H_ -D_SYS_VMEM_H_ -DIN_FREEBSD_BASE -DBITS_PER_LONG=64  -fno-strict-aliasing -Werror -D_KERNEL -DKLD_MODULE -DKLD_TIED -nostdinc  -I/root/src/sys/contrib/openzfs/include -I/root/src/sys/contrib/openzfs/include/os/freebsd -I/root/src/sys/contrib/openzfs/include/os/freebsd/spl -I/root/src/sys/contrib/openzfs/include/os/freebsd/zfs -I/root/src/sys/contrib/openzfs/module/zstd/include -I/root/src/sys/contrib/openzfs/module/icp/include -I/root/src/sys/modules/zfs -DHAVE_KERNEL_OPTION_HEADERS -include /usr/obj/root/src/powerpc.powerpc64le/sys/GENERIC64LE/opt_global.h -I. -I/root/src/sys -I/root/src/sys/contrib/ck/include -fno-common -g -fPIC -mlongcall -fno-omit-frame-pointer -fdebug-prefix-map=./machine=/root/src/sys/powerpc/include -I/usr/obj/root/src/powerpc.powerpc64le/sys/GENERIC64LE     -MD  -MF.depend.blake3_x86-64.o -MTblake3_x86-64.o -mno-altivec -msoft-float -mabi=elfv2 -ffreestanding -fwrapv -fstack-protector -Wall -Wnested-externs -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wcast-qual -Wundef -Wno-pointer-sign -D__printf__=__freebsd_kprintf__ -Wmissing-include-dirs -fdiagnostics-show-option -Wno-unknown-pragmas -Wno-error=tautological-compare -Wno-error=empty-body -Wno-error=parentheses-equality -Wno-error=unused-function -Wno-error=pointer-sign -Wno-error=shift-negative-value -Wno-address-of-packed-member -Wno-format-zero-length -Wno-nested-externs     -std=iso9899:1999 -include /root/src/sys/cddl/compat/opensolaris/sys/debug_compat.h -include /root/src/sys/contrib/openzfs/include/os/freebsd/spl/sys/ccompile.h -include /root/src/sys/modules/zfs/static_ccompile.h -c /root/src/sys/contrib/openzfs/module/icp/algs/blake3/blake3_x86-64.c -o blake3_x86-64.o
/root/src/sys/contrib/openzfs/module/icp/algs/blake3/blake3_x86-64.c:78:28: error: implicit declaration of function 'zfs_vsx_available' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        return (kfpu_allowed() && zfs_vsx_available());
                                  ^
/root/src/sys/contrib/openzfs/module/icp/algs/blake3/blake3_x86-64.c:144:28: error: implicit declaration of function 'zfs_vsx_available' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        return (kfpu_allowed() && zfs_vsx_available());


Happens since 1f1e2261e341e6ca6862f82261066ef1705f0a7a.
Comment 1 Alfredo Dal'Ava Junior freebsd_committer freebsd_triage 2022-07-07 12:58:39 UTC
Is anyone currently working on this?
Comment 2 commit-hook freebsd_committer freebsd_triage 2022-07-08 16:10:51 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=0a7fa9d11b2007331857c9575bd9b77d86c88fe4

commit 0a7fa9d11b2007331857c9575bd9b77d86c88fe4
Author:     Piotr Kubaj <pkubaj@FreeBSD.org>
AuthorDate: 2022-07-08 15:21:53 +0000
Commit:     Piotr Kubaj <pkubaj@FreeBSD.org>
CommitDate: 2022-07-08 16:10:24 +0000

    zfs: fix powerpc64le build

    PR:     265003
    Reviewed by: alfredo (on IRC)

 sys/contrib/openzfs/module/icp/algs/blake3/blake3_x86-64.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Comment 3 commit-hook freebsd_committer freebsd_triage 2022-07-08 18:54:23 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=56e8444a170934a09e200ee8ced1feccb1d32225

commit 56e8444a170934a09e200ee8ced1feccb1d32225
Author:     Alfredo Dal'Ava Junior <alfredo@FreeBSD.org>
AuthorDate: 2022-07-08 21:42:53 +0000
Commit:     Alfredo Dal'Ava Junior <alfredo@FreeBSD.org>
CommitDate: 2022-07-08 21:52:14 +0000

    zfs: fixup build on powerpc64le

    This complements 0a7fa9d11b2007331857c9575bd9b77d86c88fe4 removing
    a #warning added intentionally, replacing it by a "TODO" comment.

    PR:     265003

 sys/contrib/openzfs/module/icp/algs/blake3/blake3_x86-64.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)