zfs: fix powerpc64le build

PR:	265003
Reviewed by: alfredo (on IRC)